FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Portal_Live__c.field-meta.xml
<CustomField>
    <fullName>Portal_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In Admin the &quot;Live (Active)&quot; field is checked. This indicates the Portal is Active i.e. can process transactions. It does not indicate whether payments are actually being processed or that the test payments has been completed. To be filled in automatically via Admin/Looker integration.</description>
    <inlineHelpText>In Admin the &quot;Live (Active)&quot; field is checked. This indicates the Portal is Active i.e. can process transactions. It does not indicate whether payments are actually being processed or that the test payments has been completed.</inlineHelpText>
    <label>Portal Live</label>
    <type>Checkbox</type>
</CustomField>