FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Portal_Margin_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Portal_Margin_Revenue__c</fullName>
    <description>Portal Margin Revenue per Portal filled in via Looker API. Hidden except for Looker and Admin. Used to fill in GM% on the Opportunity for Sales.</description>
    <inlineHelpText>Portal Margin Revenue per Portal filled in via Looker API. Hidden except for Looker and Admin. Used to fill in GM% on the Opportunity for Sales.</inlineHelpText>
    <label>Portal Margin Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>