FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Portal_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Type__c</fullName>
    <description>Type of Payments or Product this portal accepts.</description>
    <inlineHelpText>Type of Payments or Product this portal accepts.</inlineHelpText>
    <label>Portal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>529 Domestic Payment</fullName>
                <label>529 - Domestic Payment</label>
            </value>
            <value>
                <fullName>AGT - Agent</fullName>
            </value>
            <value>
                <fullName>BIZ - Business Account Receivables</fullName>
            </value>
            <value>
                <fullName>CPP - Collection payments</fullName>
            </value>
            <value>
                <fullName>DOM - Same Currency Domestic Payments</fullName>
            </value>
            <value>
                <fullName>DON - Donations</fullName>
            </value>
            <value>
                <fullName>EHP - Education Healthcare Payment</fullName>
            </value>
            <value>
                <fullName>ESL - English as a Second Language</fullName>
            </value>
            <value>
                <fullName>IHP - International Healthcare Payments</fullName>
            </value>
            <value>
                <fullName>ITP - International Tuition Payments</fullName>
            </value>
            <value>
                <fullName>LON - Loan Processing</fullName>
            </value>
            <value>
                <fullName>NEP Non-Educational Payments</fullName>
                <label>NEP - Non-Educational Payments</label>
            </value>
            <value>
                <fullName>OTP - Other Tuition Payments</fullName>
            </value>
            <value>
                <fullName>SFS -Student Financial Software</fullName>
            </value>
            <value>
                <fullName>TPP - 3rd Party Payments</fullName>
            </value>
            <value>
                <fullName>SCH - Domestic Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>