FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Pricing_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Matrix__c</fullName>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Pricing Matrix</inlineHelpText>
    <label>Pricing Matrix</label>
    <length>250</length>
    <type>Text</type>
</CustomField>