FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Processor_Code__c.field-meta.xml
<CustomField>
    <fullName>Processor_Code__c</fullName>
    <description>Four letter Payment Processor Code from the Operations dashboard.</description>
    <inlineHelpText>Four letter Payment Processor Code from the Operations dashboard.</inlineHelpText>
    <label>Processor Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>