FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Prod_Config_Bypass_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Prod_Config_Bypass_DateTime__c</fullName>
    <description>Admin purpose only. Not for reporting. Set by Flows to bypass validation rules. Works with Prod Config bypass checkbox formula field.</description>
    <inlineHelpText>Admin purpose only. Not for reporting. Set by Flows to bypass validation rules. Works with Prod Config bypass checkbox formula field.</inlineHelpText>
    <label>Prod Config Bypass DateTime</label>
    <type>DateTime</type>
</CustomField>