FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Prod_Config_Owner__c.field-meta.xml
<CustomField>
    <fullName>Prod_Config_Owner__c</fullName>
    <description>Relationship Manager for related Account</description>
    <formula>IF( NOT(ISBLANK( Account__r.Relationship_Manager__c)) , Account__r.Relationship_Manager__r.Flow_Full_Name__c,

IF( NOT(ISBLANK( Account__r.Relationship_Associate__c)) ,Account__r.Relationship_Associate__r.Flow_Full_Name__c,

IF( NOT(ISBLANK( Account__r.CS_Specialist__c)), Account__r.CS_Specialist__r.Flow_Full_Name__c, Account__r.Relationship_Manager__r.Flow_Full_Name__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto populated Owner from Account Record Relationship Manager field.</inlineHelpText>
    <label>Prod Config Owner</label>
    <type>Text</type>
</CustomField>