FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Prod_Config_Set_Live__c.field-meta.xml
<CustomField>
    <fullName>Prod_Config_Set_Live__c</fullName>
    <description>Date stamp of when the Prod Config record was set to live.</description>
    <inlineHelpText>Auto completed Date stamp of when the Prod Config record was set to live.</inlineHelpText>
    <label>Prod Config Set Live</label>
    <type>Date</type>
</CustomField>