FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Prod_Config_Val_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Prod_Config_Val_Bypass__c</fullName>
    <description>Admin field not for reporting. Used to bypass validation rules when Flows are triggered. Works with Prod Config Bypass DateTime</description>
    <formula>Prod_Config_Bypass_DateTime__c &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <inlineHelpText>Admin field not for reporting. Used to bypass validation rules when Flows are triggered. Works with Prod Config Bypass DateTime</inlineHelpText>
    <label>Prod Config Val Bypass</label>
    <type>Checkbox</type>
</CustomField>