FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/ProdConfigLongID__c.field-meta.xml
<CustomField>
    <fullName>ProdConfigLongID__c</fullName>
    <description>LongID18 Character ID for easy Excel Vlookup</description>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LongID18 Character ID for easy Excel Vlookup</inlineHelpText>
    <label>ProdConfigLongID</label>
    <type>Text</type>
</CustomField>