FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select Product this Prod Config record is for.</description>
    <inlineHelpText>Select Product this Prod Config record is for.</inlineHelpText>
    <label>Product</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Configuration</relationshipLabel>
    <relationshipName>Product_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>