FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Product_Impl_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Impl_ID__c</fullName>
    <description>Unique Identifier from the Payables Application. From Engineering / Dan Ladd SAL-2941</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Identifier from the Payables Application.</inlineHelpText>
    <label>Product Impl ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>