FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Product_Stage__c.field-meta.xml
<CustomField>
    <fullName>Product_Stage__c</fullName>
    <description>Select the stage of completion for this Prod Config.</description>
    <inlineHelpText>Select the stage of completion for this Prod Config.</inlineHelpText>
    <label>Product Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Client Training</fullName>
            </value>
            <value>
                <fullName>Client Roll-out</fullName>
            </value>
            <value>
                <fullName>On hold by Client</fullName>
            </value>
            <value>
                <fullName>Payment Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>