FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <description>Status field created to know the status for this particular product that was sold.</description>
    <inlineHelpText>Enter the current status of this product.</inlineHelpText>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>