FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Product_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Status_Date__c</fullName>
    <description>Enter the date associated with the status of this product.  This will help with reporting where in the old instance we use &quot;date first contract signed&quot; - now we can use the product status date.</description>
    <inlineHelpText>Update the status date every time you change the Account Status. The date is auto copied to Opp and Account, be sure it&apos;s accurate when changing status to Active.</inlineHelpText>
    <label>Product Status Date</label>
    <type>Date</type>
</CustomField>