FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Profit_Settlement_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Profit_Settlement_Schedule__c</fullName>
    <label>Profit Settlement Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>2X Per Month</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Daily In Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>