FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Manager working to activate this Product.</description>
    <inlineHelpText>Project Manager working to activate this Product.</inlineHelpText>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Configuration1</relationshipName>
    <type>Lookup</type>
</CustomField>