FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Project_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Plan_Link__c</fullName>
    <inlineHelpText>URL to project plan for RM and Implementation</inlineHelpText>
    <label>Project Plan Link</label>
    <type>Url</type>
</CustomField>