FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/PYMT_Plan_Comm_Schedule__c.field-meta.xml
<CustomField>
    <fullName>PYMT_Plan_Comm_Schedule__c</fullName>
    <description>List of payment plan &amp; communication schedules or link to additional details.</description>
    <inlineHelpText>List of payment plan &amp; communication schedules or link to additional details.</inlineHelpText>
    <label>PYMT Plan &amp; Comm Schedule</label>
    <type>TextArea</type>
</CustomField>