FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Real_Time_or_Batch__c.field-meta.xml
<CustomField>
    <fullName>Real_Time_or_Batch__c</fullName>
    <label>Real Time or Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Real-time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>