FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Reason_for_Portal_Hiding__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Portal_Hiding__c</fullName>
    <description>For client support users (SM/RM/CE etc), to have visibility why client decides to have their portal hidden from our payex dropdown menu. SAL-2821 To be filled in by RM/Solutions.</description>
    <inlineHelpText>Client’s reason for choosing to hide their portal.</inlineHelpText>
    <label>Reason for Portal Hiding</label>
    <length>150</length>
    <type>Text</type>
</CustomField>