FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Refund_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Refund_Payment_Method__c</fullName>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Refund payment method</inlineHelpText>
    <label>Refund Payment Method</label>
    <length>250</length>
    <type>Text</type>
</CustomField>