FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Refund_Return_Payout_Fee__c.field-meta.xml
<CustomField>
    <fullName>Refund_Return_Payout_Fee__c</fullName>
    <label>Refund/Return Payout Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>