FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee__c</fullName>
    <description>Amount and currency of service fee</description>
    <inlineHelpText>Specify amount and currency.</inlineHelpText>
    <label>Service Fee</label>
    <type>TextArea</type>
</CustomField>