FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Settlement_Currency__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Currency__c</fullName>
    <label>Settlement Currency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>