FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Settlement_Fee__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Fee__c</fullName>
    <label>Settlement Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>