FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Settlement_Method__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Method__c</fullName>
    <label>Settlement Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Per Currency</fullName>
            </value>
            <value>
                <fullName>Per Vertical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>