FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Settlement_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Schedule__c</fullName>
    <label>Settlement Schedule</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T+0</fullName>
            </value>
            <value>
                <fullName>T+1</fullName>
            </value>
            <value>
                <fullName>T+2</fullName>
            </value>
            <value>
                <fullName>T+3</fullName>
            </value>
            <value>
                <fullName>T+4</fullName>
            </value>
            <value>
                <fullName>T+5</fullName>
            </value>
            <value>
                <fullName>T+6</fullName>
            </value>
            <value>
                <fullName>T+7</fullName>
            </value>
            <value>
                <fullName>T+8</fullName>
            </value>
            <value>
                <fullName>T+9</fullName>
            </value>
            <value>
                <fullName>T+10</fullName>
            </value>
            <value>
                <fullName>T+11</fullName>
            </value>
            <value>
                <fullName>T+12</fullName>
            </value>
            <value>
                <fullName>T+0 &gt; 50,000 CNY</fullName>
            </value>
            <value>
                <fullName>T+3 for GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>