FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Settlement_Schedule_Details__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Schedule_Details__c</fullName>
    <description>Global Payments field</description>
    <label>Settlement Schedule Details</label>
    <type>TextArea</type>
</CustomField>