FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/SFTP_Integration__c.field-meta.xml
<CustomField>
    <fullName>SFTP_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for admin to prod config automation</description>
    <inlineHelpText>Is this portal SFTP integrated?</inlineHelpText>
    <label>SFTP Integration</label>
    <type>Checkbox</type>
</CustomField>