FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Sort_Code_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Sort_Code_Routing_Number__c</fullName>
    <description>Sort Code/Routing Number</description>
    <inlineHelpText>Sort Code/Routing Number</inlineHelpText>
    <label>Sort Code/Routing Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>