FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Spring_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Spring_Due_Date__c</fullName>
    <description>For RM when is the clients spring bill due.</description>
    <inlineHelpText>Format: MM/DD</inlineHelpText>
    <label>Spring Due Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>