FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Spring_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Spring_Release_Date__c</fullName>
    <description>For RMs when are the clients spring bills released to students</description>
    <inlineHelpText>Format: MM/DD</inlineHelpText>
    <label>Spring Release Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>