FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/SSO__c.field-meta.xml
<CustomField>
    <fullName>SSO__c</fullName>
    <description>Single-sign-on Y or N</description>
    <inlineHelpText>Single-sign-on Y or N</inlineHelpText>
    <label>SSO</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSO Students</fullName>
            </value>
            <value>
                <fullName>SSO Authorized Users</fullName>
            </value>
            <value>
                <fullName>SSO Employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>