FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/SSO_Version__c.field-meta.xml
<CustomField>
    <fullName>SSO_Version__c</fullName>
    <description>SSO Version</description>
    <inlineHelpText>SSO Version</inlineHelpText>
    <label>SSO Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAML2</fullName>
            </value>
            <value>
                <fullName>SHA512</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>