FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Student_Login_Link__c.field-meta.xml
<CustomField>
    <fullName>Student_Login_Link__c</fullName>
    <description>Provide link for students to log in.</description>
    <inlineHelpText>Provide link for students to log in.</inlineHelpText>
    <label>Student Login Link</label>
    <type>Url</type>
</CustomField>