FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Subdomain__c.field-meta.xml
<CustomField>
    <fullName>Subdomain__c</fullName>
    <description>Enter the subdomain for the Flywire portal that is associated with this product.</description>
    <inlineHelpText>Enter the subdomain for the Flywire portal that is associated with this product.</inlineHelpText>
    <label>Subdomain</label>
    <length>150</length>
    <type>Text</type>
</CustomField>