FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Trade_Timing__c.field-meta.xml
<CustomField>
    <fullName>Trade_Timing__c</fullName>
    <label>Trade Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Time of Settlement to Flywire</fullName>
            </value>
            <value>
                <fullName>At Time Payer Submits Transaction</fullName>
            </value>
            <value>
                <fullName>At Time of Payment Booking on Flywire</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>