FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Trigger_Flow__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Superseded by Flow Trigger field which is text so you can mass update on all. rather than checking and unchecking a box.</description>
    <inlineHelpText>Used to make a change to the record so any triggered flows will launch.</inlineHelpText>
    <label>OBS Trigger Flow</label>
    <type>Checkbox</type>
</CustomField>