FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Unique_Prod_Config__c.field-meta.xml
<CustomField>
    <fullName>Unique_Prod_Config__c</fullName>
    <description>To report on unique product config records for reporting by summarizing by this field. (power of one)</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To report on unique product config records for reporting by summarizing by this field. (power of one)</inlineHelpText>
    <label>Unique Prod Config</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>