FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Variable_Payout_Fee__c.field-meta.xml
<CustomField>
    <fullName>Variable_Payout_Fee__c</fullName>
    <description>Field created for global payments team</description>
    <label>Variable Payout Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>