FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Virtual_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual Accounts</label>
    <type>Checkbox</type>
</CustomField>