FLY wire David/force-app/main/default/objects/Product_Configuration__c/fields/Virtual_Accounts_Format__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Accounts_Format__c</fullName>
    <label>Virtual Accounts Format</label>
    <type>TextArea</type>
</CustomField>