FLY wire David/force-app/main/default/objects/Product_Configuration__c/recordTypes/Bank_PSP_Partner.recordType-meta.xml
<RecordType>
    <fullName>Bank_PSP_Partner</fullName>
    <active>true</active>
    <description>Bank/PSP Partner Child Records to hold Bank Account specifics.</description>
    <label>Bank/PSP Partner</label>
</RecordType>