FLY wire David/force-app/main/default/objects/Product_Configuration__c/recordTypes/Portal.recordType-meta.xml
<RecordType>
    <fullName>Portal</fullName>
    <active>true</active>
    <description>Configuration Record for Portals (e.g. ITP, Commercial, Healthcare IP, etc)</description>
    <label>Portal</label>
</RecordType>