FLY wire David/force-app/main/default/objects/Product_Configuration__c/validationRules/Payor_Support_Authorized.validationRule-meta.xml
<ValidationRule>
    <fullName>Payor_Support_Authorized</fullName>
    <active>true</active>
    <description>If the portal type is CRS, answer what support can priovde.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;B - Looker&quot;,
  ISPICKVAL(FW_Providing_Payor_Support__c, &quot;Yes&quot;),
OR(
  ISBLANK(TEXT( FW_Authorized_to_Cancel_Plan__c )),
  ISBLANK(TEXT(  FW_Authorized_to_Cancel_Installments__c  )),
  ISBLANK(TEXT(  FW_Authorized_to_Void_Installments__c ))
  )
)</errorConditionFormula>
    <errorDisplayField>FW_Providing_Payor_Support__c</errorDisplayField>
    <errorMessage>For CRS clients with Flywire support you must list if Authorized to Cancel Plan, Cancel Installment, Void Installments.</errorMessage>
</ValidationRule>