FLY wire David/force-app/main/default/objects/Product_Configuration__c/validationRules/Payor_Support_CRS.validationRule-meta.xml
<ValidationRule>
    <fullName>Payor_Support_CRS</fullName>
    <active>true</active>
    <description>If the portal type is SFS, answer if FW will provide Payor Support.</description>
    <errorConditionFormula>AND(
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  $Profile.Name &lt;&gt; &quot;B - Looker&quot;,
  ISPICKVAL(Portal_Type__c, &quot;SFS -Student Financial Software&quot;),
  ISBLANK(TEXT(FW_Providing_Payor_Support__c))
)</errorConditionFormula>
    <errorDisplayField>FW_Providing_Payor_Support__c</errorDisplayField>
    <errorMessage>For SFS clients, you must select whether Flywire is providing support for this product or not.</errorMessage>
</ValidationRule>