FLY wire David/force-app/main/default/objects/Product_Configuration__c/validationRules/XB_PC_Must_Have_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>XB_PC_Must_Have_Code</fullName>
    <active>false</active>
    <description>POrtal code must be filled out on non CRS and Agent portals.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &quot;B - Looker&quot;,
RecordType.Name = &apos;Portal&apos;,
ISPICKVAL(Product_Status__c, &apos;Active (Product Live)&apos;),
ISBLANK(Code__c),
Product__r.Name = &quot;Cross Border Payments&quot;
)</errorConditionFormula>
    <errorDisplayField>Code__c</errorDisplayField>
    <errorMessage>Must include the 3 letter Portal Code to go live. Please verify the code is the same as in Admin.</errorMessage>
</ValidationRule>