FLY wire David/force-app/main/default/objects/Product_Configuration__c/listViews/AGT_Prod_Config.listView-meta.xml
<ListView>
    <fullName>AGT_Prod_Config</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Activated_Date__c</columns>
    <columns>Product_Status__c</columns>
    <columns>Product_Status_Date__c</columns>
    <columns>Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Portal_Type__c</field>
        <operation>equals</operation>
        <value>AGT - Agent</value>
    </filters>
    <label>AGT Prod Config</label>
</ListView>