FLY wire David/force-app/main/default/objects/Product_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Link__c</columns>
    <columns>Account__c</columns>
    <columns>Product_Status__c</columns>
    <columns>Config_Owner__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Portal_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>